# reading-data

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SimpleHtmlDocTree.cpp  SimpleHtmlDocTree.h  errors.h  example.cpp  example.h  library.cpp  library.h  shtmItem.h  shtmTreeItem.cpp  shtmTreeItem.h  utils.h
pybind11/tools/: FindPythonLibsNew.cmake
python/: setup.py
